fixed search bar visibility:

--- a/app/assets/stylesheets/api/video.scss
+++ b/app/assets/stylesheets/api/video.scss
@@ -98,6 +98,7 @@
     top: 0%;
     left: 40%;
     display: inline;
+    visibility: visible;
   }
 
   .search button {
